--- a/A1_DataCleaning_template.Rmd
+++ b/A1_DataCleaning_template.Rmd
@@ -1,8 +1,10 @@
 ---
 title: "Assignment 1 - Data Cleaning - Instructions"
-author: "[FILL IN YOUR NAME]"
-date: "[FILL IN THE DATE]"
-output: html_document
+author: "Sofie Rødkjær Blendstrup"
+date: "10-09-2019"
+output:   
+  md_document:
+    variant: markdown_github
 ---
 
 # Assignment 1, Language development in Autism Spectrum Disorder (ASD) - Brushing up your code skills
@@ -163,6 +165,7 @@ sub_token <- select(token, SUBJ, VISIT, types_MOT, types_CHI, tokens_MOT, tokens
 #rename columns 
 names(sub_demo)[8] <- "nonVerbalIQ"
 names(sub_demo)[9] <- "verbalIQ"
+
 ```
 
 2e. Finally we are ready to merge all the data sets into just one. 
@@ -222,6 +225,11 @@ levels(df_merged$Gender) <- c("M", "F") #call first level "M" and second level "
 df_merged$Diagnosis <- as.factor(df_merged$Diagnosis)
 levels(df_merged$Diagnosis)
 levels(df_merged$Diagnosis) <- c("ASD", "TD")
+
+
+
+#save data set as .csv file
+write.csv(df_merged, file = "Assignment1_df.csv")
 ```
 
 
